# bluma-cli

./: .env.example  .gitignore  BLUMA_CLI_PLAN.md  BluMa.md  CONTRIBUTING.md  LICENSE  README.md  babel.config.cjs  bluma.spec  issues_to_create.md  jest.config.cjs  package-lock.json  package.json  prd.md  pyproject.toml  requirements-linux.txt  requirements.txt  test_ASCII.tsx  todo.md  tsconfig.json
__mocks__/: ink-testing-library.js
backend-python/: bluma.py
cli/: index.tsx
custom_tools/: edit.py  end_task.py  message.py
scripts/: build-frontend.js  build.js  global-shim.js  session_stress_isolated.js  session_stress_test.js
sessions/: 021f9a53-0227-4384-b8eb-675767316873.json  07b92e41-a268-41e4-a636-d96a3ea2d450.json  1855cdd3-6b47-410b-a92a-1b3d7bcddb9e.json  246f1ac4-c521-4f2e-8918-195067309626.json  28d90f4b-5383-41ba-a745-abe07f06d5df.json  33055f7c-5131-4201-ac42-d9126b676d37.json  62666191-c47c-49da-a855-e4868c075b9f.json  6834c18a-8df1-44fc-ad65-c49279588caf.json  82f4f448-8ab2-49ca-bf13-bf41a774ce76.json  9fab3522-d89f-456c-9d1d-1f02f6abca17.json  a5576113-533c-45f1-8cf7-555df44f2b1f.json  ad83cce0-1402-4444-86a2-079a9fb51c95.json  ae4db1e3-e835-4218-85de-f5d710e91363.json  baf1873f-40e2-41dd-a1ad-0e2e1e538944.json  bcb60b78-1464-4ba7-8526-e0b96d6c1bc6.json  d1d8abd0-d1da-4714-9d4e-8a89d6f04b0e.json  d7c8e16a-c6c4-4e8c-9010-ae6032958a6b.json  da48e6e8-f816-4122-88a5-4f8fa5ec4db2.json  dd8427b9-0466-40f3-9bfa-e4cb9e579d14.json
src/: main.ts
test/: test.tsx
tests/: agent_overlays.integration.spec.ts  agent_overlays.llm_context.spec.ts  (+13 more)
(+231 files in other folders)
